Listo para Deploy

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
   <link rel="icon" href="images/logo.png" />
   <title>oFruit Tienda</title>
@@ -47,8 +46,8 @@
 
   <!------------------- Buscador y banner------------------->
   <section id="search-banner">
-    <img data-aos="zoom-in" src="images/bg-1.png" class="bg-1" alt="" />
-    <img data-aos="zoom-in" src="images/bg-2.png" class="bg-2" alt="" />
+    <img data-aos="zoom-in" src="./src/images/bg-1.png" class="bg-1" alt="" />
+    <img data-aos="zoom-in" src="./src/images/bg-2.png" class="bg-2" alt="" />
 
     <!--Texto-->
     <div class="search-banner-text">
@@ -73,19 +72,19 @@
     </div>
     <div class="category-container" data-aos="fade-up" data-aos-duration="1000">
       <a href="" class="category-box">
-        <img src="images/Category.png" alt="" />
+        <img src="./src/images/Category.png" alt="" />
         <span>Dulces</span>
       </a>
       <a href="" class="category-box">
-        <img src="images/Category.png" alt="" />
+        <img src="./src/images/Category.png" alt="" />
         <span>Cítricos</span>
       </a>
       <a href="" class="category-box">
-        <img src="images/Category.png" alt="" />
+        <img src="./src/images/Category.png" alt="" />
         <span>Detox</span>
       </a>
       <a href="" class="category-box">
-        <img src="images/Category.png" alt="" />
+        <img src="./src/images/Category.png" alt="" />
         <span>Dulce y Ácido</span>
       </a>
 
@@ -106,7 +105,7 @@
       <div class="container">
         <div class="element">
           <div class="front">
-            <img src="/images/productos/batido-1.png" alt="">
+            <img src="./src/images/productos/batido-1.png" alt="">
           </div>
           <div class="back">
             <div class="back-content">
@@ -138,7 +137,7 @@
       <div class="container">
         <div class="element">
           <div class="front">
-            <img src="images/productos/batido-2.png" alt="">
+            <img src="./src/images/productos/batido-2.png" alt="">
           </div>
           <div class="back">
             <div class="back-content">
@@ -166,7 +165,7 @@
       <div class="container">
         <div class="element">
           <div class="front">
-            <img src="/images/productos/batido-3.png" alt="">
+            <img src="./src/images/productos/batido-3.png" alt="">
           </div>
           <div class="back">
             <div class="back-content">
@@ -194,7 +193,7 @@
       <div class="container">
         <div class="element">
           <div class="front">
-            <img src="/images/productos/batido-4.png" alt="">
+            <img src="./src/images/productos/batido-4.png" alt="">
           </div>
           <div class="back">
             <div class="back-content">
@@ -222,7 +221,7 @@
       <div class="container">
         <div class="element">
           <div class="front">
-            <img src="/images/productos/batido-5.png" alt="">
+            <img src="./src/images/productos/batido-5.png" alt="">
           </div>
           <div class="back">
             <div class="back-content">
@@ -250,7 +249,7 @@
       <div class="container">
         <div class="element">
           <div class="front">
-            <img src="/images/productos/batido-6.png" alt="">
+            <img src="./src/images/productos/batido-6.png" alt="">
           </div>
           <div class="back">
             <div class="back-content">
@@ -285,11 +284,11 @@
     </div>
 
     <div class="logo-cont" data-aos="fade-right">
-      <img src="images/logo-1.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" />
-      <img src="images/logo-2.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" />
-      <img src="images/logo-3.jpg" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" />
-      <img src="images/logo-4.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" />
-      <img src="images/logo-5.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" />
+      <img src="./src/images/logo-1.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" />
+      <img src="./src/images/logo-2.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" />
+      <img src="./src/images/logo-3.jpg" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" />
+      <img src="./src/images/logo-4.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" />
+      <img src="./src/images/logo-5.png" alt="" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" />
     </div>
   </section>
   <!--Marcas Seccion fin-->
@@ -298,7 +297,7 @@
 
   <section id="app">
     <div class="app-image" data-aos="zoom-in">
-      <img src="images/app-img.png" alt="" />
+      <img src="./src/images/app-img.png" alt="" />
     </div>
     <div class="app-texto" data-aos="fade-up" data-aos-duration="1000">
       <strong>Descargar App</strong>
@@ -309,8 +308,8 @@
         blanditiis.
       </p>
       <div class="botones">
-        <a href="#"><img src="images/googleplay-btn.png" alt="" /></a>
-        <a href="#"><img src="images/appstore-btn.png" alt="" /></a>
+        <a href="#"><img src="./src/images/googleplay-btn.png" alt="" /></a>
+        <a href="#"><img src="./src/images/appstore-btn.png" alt="" /></a>
       </div>
     </div>
   </section>
@@ -370,13 +369,13 @@
       </div>
     </div>
   </footer>
- <!--  <script src="/js/scroll.js"></script> -->
+  <script src="./src/js/main.js" type="module" ></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
- <!--  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
-  <!-- <script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+   <script>
     AOS.init();
-  </script> -->
+  </script>
 </body>
 
 </html>
