--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
   </footer>
   <script src="./src/js/main.js" type="module" ></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
    <script>
     AOS.init();
   </script>
